adding Czekala citataion

--- a/documents/GProtation.bib
+++ b/documents/GProtation.bib
@@ -2952,3 +2952,22 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2009MNRAS.395.2226B},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{Czekala2015,
+   author = {{Czekala}, I. and {Andrews}, S.~M. and {Mandel}, K.~S. and {Hogg}, D.~W. and
+	{Green}, G.~M.},
+    title = "{Constructing a Flexible Likelihood Function for Spectroscopic Inference}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1412.5177},
+ primaryClass = "astro-ph.SR",
+ keywords = {methods: data analysis, methods: statistical, stars: fundamental parameters, stars: late-type, stars: statistics, techniques: spectroscopic},
+     year = 2015,
+    month = oct,
+   volume = 812,
+      eid = {128},
+    pages = {128},
+      doi = {10.1088/0004-637X/812/2/128},
+   adsurl = {http://adsabs.harvard.edu/abs/2015ApJ...812..128C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
