adding Littlefair and Vanderburg

--- a/documents/GProtation.bib
+++ b/documents/GProtation.bib
@@ -2971,3 +2971,50 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2015ApJ...812..128C},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{Littlefair2017,
+   author = {{Littlefair}, S.~P. and {Burningham}, B. and {Helling}, C.},
+    title = "{Robust detection of quasi-periodic variability: a HAWK-I mini survey of late-T dwarfs}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1703.01245},
+ primaryClass = "astro-ph.SR",
+ keywords = {Stars: brown dwarfs, brown dwarfs},
+     year = 2017,
+    month = apr,
+   volume = 466,
+    pages = {4250-4258},
+      doi = {10.1093/mnras/stw3376},
+   adsurl = {http://adsabs.harvard.edu/abs/2017MNRAS.466.4250L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Vanderburg2015,
+   author = {{Vanderburg}, A. and {Montet}, B.~T. and {Johnson}, J.~A. and
+	{Buchhave}, L.~A. and {Zeng}, L. and {Pepe}, F. and {Collier Cameron}, A. and
+	{Latham}, D.~W. and {Molinari}, E. and {Udry}, S. and {Lovis}, C. and
+	{Matthews}, J.~M. and {Cameron}, C. and {Law}, N. and {Bowler}, B.~P. and
+	{Angus}, R. and {Baranec}, C. and {Bieryla}, A. and {Boschin}, W. and
+	{Charbonneau}, D. and {Cosentino}, R. and {Dumusque}, X. and
+	{Figueira}, P. and {Guenther}, D.~B. and {Harutyunyan}, A. and
+	{Hellier}, C. and {Kuschnig}, R. and {Lopez-Morales}, M. and
+	{Mayor}, M. and {Micela}, G. and {Moffat}, A.~F.~J. and {Pedani}, M. and
+	{Phillips}, D.~F. and {Piotto}, G. and {Pollacco}, D. and {Queloz}, D. and
+	{Rice}, K. and {Riddle}, R. and {Rowe}, J.~F. and {Rucinski}, S.~M. and
+	{Sasselov}, D. and {S{\'e}gransan}, D. and {Sozzetti}, A. and
+	{Szentgyorgyi}, A. and {Watson}, C. and {Weiss}, W.~W.},
+    title = "{Characterizing K2 Planet Discoveries: A Super-Earth Transiting the Bright K Dwarf HIP 116454}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1412.5674},
+ primaryClass = "astro-ph.EP",
+ keywords = {planets and satellites: detection, techniques: photometric},
+     year = 2015,
+    month = feb,
+   volume = 800,
+      eid = {59},
+    pages = {59},
+      doi = {10.1088/0004-637X/800/1/59},
+   adsurl = {http://adsabs.harvard.edu/abs/2015ApJ...800...59V},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
